# AI-usage-counter

./: README.md  package-lock.json  pyproject.toml  setup.sh
aiusage/: __init__.py  aggregator.py  chart.py  cli.py  config.py  display.py  parser.py  pricing.py  watch.py
aiusage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
aiusage/providers/: __init__.py  claude.py  detector.py  gemini.py  openrouter.py
